--- a/README.Rmd
+++ b/README.Rmd
@@ -20,11 +20,13 @@ knitr::opts_chunk$set(
 # tidyterra <a href="https://dieghernan.github.io/tidyterra/"><img src="man/figures/logo.png" align="right" height="139"/></a>
 
 <!-- badges: start -->
+
 [![R-CMD-check](https://github.com/dieghernan/tidyterra/actions/workflows/check-full.yaml/badge.svg)](https://github.com/dieghernan/tidyterra/actions/workflows/check-full.yaml)
 [![codecov](https://codecov.io/gh/dieghernan/tidyterra/branch/main/graph/badge.svg?token=blvDmRjcfb)](https://app.codecov.io/gh/dieghernan/tidyterra)
 [![r-universe](https://dieghernan.r-universe.dev/badges/tidyterra)](https://dieghernan.r-universe.dev/)
-[![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
-
+[![Project Status: WIP – Initial development is in progress, but there has not
+yet been a stable, usable release suitable for the
+public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
 
 <!-- badges: end -->
 
@@ -36,8 +38,8 @@ SpatVector. It also provides geoms for plotting these objects with
 
 ## Overview
 
-{tidyverse} methods implemented on {tidyterra} works differently depending on the
-type of Spat\* object:
+{tidyverse} methods implemented on {tidyterra} works differently depending on
+the type of Spat\* object:
 
 -   SpatVector: the methods are implemented taking advantage of the tidyverse
     implementation on {sf}. The SpatVector object is converted first to sf via
@@ -58,12 +60,13 @@ example, `as_tibble()` would return a tibble).
 Current methods and functions provided by {tidyterra} are:
 
 | tidyverse method      | SpatVector                             | SpatRaster                                                                                                     |
-|-----------------------|----------------------------------------|----------------------------------------------------------------------------------------------------------------|
+|-----------------|-----------------|-----------------------------------------------|
 | `tibble::as_tibble()` | :heavy_check_mark:                     | :heavy_check_mark:                                                                                             |
 | `dplyr::select()`     | :heavy_check_mark:                     | :heavy_check_mark: Select layers                                                                               |
 | `dplyr::mutate()`     | :heavy_check_mark:                     | :heavy_check_mark: Create /modify layers                                                                       |
 | `dplyr::filter()`     | :heavy_check_mark:                     | :heavy_check_mark: Modify cells values and (additionally) remove outer cells.                                  |
 | `dplyr::slice()`      | :heavy_check_mark:                     | :heavy_check_mark: Additional methods for slicing by row and column.                                           |
+| `dplyr::pull()`       | :heavy_check_mark:                     | :heavy_check_mark:                                                                                             |
 | `tidyr::drop_na()`    | :heavy_check_mark:                     | :heavy_check_mark: Remove cell values with `NA` on any layer. Additionally, outer cells with `NA` are removed. |
 | `tidyr::replace_na()` | :heavy_check_mark:                     | :heavy_check_mark:                                                                                             |
 | `ggplot2::geom_*()`   | :heavy_check_mark: `geom_spatvector()` | :heavy_check_mark: `geom_spatraster()` and `geom_spatraster_rgb()`.                                            |
