--- a/README.Rmd
+++ b/README.Rmd
@@ -72,6 +72,23 @@ Current methods and functions provided by {tidyterra} are:
 | `tidyr::replace_na()` | :heavy_check_mark:                     | :heavy_check_mark:                                                                                             |
 | `ggplot2::geom_*()`   | :heavy_check_mark: `geom_spatvector()` | :heavy_check_mark: `geom_spatraster()` and `geom_spatraster_rgb()`.                                            |
 
+## :exclamation: A note on performance
+
+{tidyterra} is conceived as a user-friendly wrapper of {terra} using the
+{tidyverse} methods and verbs. This approach therefore has a **cost in terms of
+performance**.
+
+If you are a **heavy user of {terra}** or you need to work with **big raster
+files**, {terra} is much more focused on terms of performance. When possible,
+each function of {tidyterra} references to its equivalent on {terra}.
+
+As a rule of thumb if your raster has less than 1.000.000 cells (i.e.
+`terra::ncell(my_raster) <- 1000000`) you are good to go with {tidyterra}.
+
+When plotting rasters, resampling is performed automatically (as `terra::plot()`
+does, see `maxcell` parameter). You can adjust this with the `maxcell`
+parameter.
+
 ## Installation
 
 You can install the development version of {tidyterra} like so:
