--- a/vignettes/tidyterra.Rmd
+++ b/vignettes/tidyterra.Rmd
@@ -49,7 +49,174 @@ Specially when working with `filter()` and `mutate()` methods, it can be slow.
 As a rule of thumb, {tidyterra} can handle objects with less than 10.000.000
 slots of information(i.e., `terra::ncell(a_rast) * terra::nlyr(a_rast) < 10e6`).
 
-## About SpatVectors {#about}
+## Get started with {tidyterra}
+
+First thing you'll notice when loading {tidyterra} is that a set of packages
+would be also loaded. You can disable the message by setting
+`Sys.setenv(tidyterra.quiet = TRUE)`.
+
+```{r setup, message=TRUE}
+# Disable message with:
+# Sys.setenv(tidyterra.quiet = TRUE)
+library(tidyterra)
+```
+
+Currently, the following methods are available:
+
+| tidyverse method      | SpatVector | SpatRaster      |
+|-----------------------|------------|-----------------|
+| `tibble::as_tibble()` | ✔️         | ✔️              |
+| `dplyr::filter()`     | ✔️         | ✔️              |
+| `dplyr::mutate()`     | ✔️         | ✔️              |
+| `dplyr::pull()`       | ✔️         | ✔️              |
+| `dplyr::relocate()`   | ✔️         | ✔️              |
+| `dplyr::rename()`     | ✔️         | ✔️              |
+| `dplyr::select()`     | ✔️         | ✔️              |
+| `dplyr::slice()`      | ✔️         | ✔️              |
+| `dplyr::transmute()`  | ✔️         | ✔️              |
+| `tidyr::drop_na()`    | ✔️         | ✔️ (questioned) |
+| `tidyr::replace_na()` | ✔️         | ✔️              |
+
+Let's see some of them in action:
+
+```{r}
+library(terra)
+f <- system.file("extdata/cyl_temp.tif", package = "tidyterra")
+
+temp <- rast(f)
+
+temp
+
+mod <- temp %>%
+  select(-1) %>%
+  mutate(newcol = tavg_06 - tavg_05) %>%
+  relocate(newcol, .before = 1) %>%
+  replace_na(list(newcol = 3)) %>%
+  rename(difference = newcol)
+
+mod
+plot(mod)
+```
+
+On the previous example, we had:
+
+-   Eliminated the first layer of the raster `tavg_04`.
+
+-   Created a new layer `newcol` as the difference of the layers `tavg_05` and
+    `tavg_06.`
+
+-   Relocated `newcol`as the first layer of the SpatRaster
+
+-   Replaced the `NA` cells on `newcol` with `3`.
+
+-   Renamed `newcol` to difference.
+
+In all the process, the essential properties of the SpatRaster (number of cells,
+columns and rows, extent, resolution and coordinate reference system) have not
+been modified. Other methods as `filter()`, `slice()` or `drop_na()` can modify
+these properties, as they would do when applied to a data frame (number of rows
+would be modified on that case).
+
+## Plotting with {ggplot2}
+
+### SpatRasters
+
+{tidyterra} provides several `geom_*` for SpatRasters. When the SpatRaster has
+the CRS informed (i.e. `terra::crs(a_rast) != ""`), the geom uses
+`ggplot2::coord_sf()`, and may be also reprojected for adjusting the coordinates
+to other spatial layers:
+
+```{r terraplots}
+
+library(ggplot2)
+
+# A faceted SpatRaster
+
+ggplot() +
+  geom_spatraster(data = temp) +
+  facet_wrap(~lyr) +
+  scale_fill_terrain_c(direction = -1)
+
+
+# Contour lines for a specific layer
+
+ggplot() +
+  geom_spatraster(data = temp, aes(fill = tavg_06)) +
+  geom_spatraster_contour(
+    data = temp, aes(z = tavg_06),
+    color = "black",
+    breaks = seq(7.5, 22.5, 2.5)
+  ) +
+  scale_fill_gradientn(
+    colours = hcl.colors(10, "RdBu", rev = TRUE),
+    na.value = "white"
+  ) +
+  coord_sf(expand = FALSE) +
+  labs(fill = "tavg_06")
+
+
+# Contour filled for a specific layer
+
+ggplot() +
+  geom_spatraster_contour_filled(
+    data = temp, aes(z = tavg_06),
+    breaks = seq(7.5, 22.5, 2.5)
+  ) +
+  scale_fill_viridis_d() +
+  coord_sf(expand = FALSE) +
+  labs(fill = "tavg_06")
+```
+
+With {tidyterra} you can also plot RGB SpatRasters to add imagery to your plots:
+
+```{r rgb}
+
+# Read a vector
+
+f_v <- system.file("extdata/cyl.gpkg", package = "tidyterra")
+v <- vect(f_v)
+
+# Read a tile
+f_rgb <- system.file("extdata/cyl_tile.tif", package = "tidyterra")
+
+r_rgb <- rast(f_rgb)
+
+rgb_plot <- ggplot() +
+  geom_spatraster_rgb(data = r_rgb) +
+  geom_spatvector(data = v, fill = NA, size = 1)
+
+rgb_plot
+# Change CRS automatically
+
+rgb_plot +
+  coord_sf(crs = 3035)
+```
+
+### SpatVectors
+
+{tidyterra} allows you to plot SpatVectors with {ggplot2} using the
+`geom_spatvector()` functions:
+
+```{r}
+lux <- system.file("ex/lux.shp", package = "terra")
+
+spatvector <- terra::vect(lux)
+
+ggplot() +
+  geom_spatvector(data = spatvector, aes(fill = POP)) +
+  geom_spatvector_text(
+    data = spatvector, aes(label = NAME_2),
+    color = "grey90"
+  ) +
+  scale_fill_binned(labels = scales::number_format()) +
+  coord_sf(crs = 3857)
+```
+
+The underlying implementation is to take advantage of the conversion
+`terra::vect()/sf::st_as_sf()` (see [**About SpatVectors**](#about)) and use
+`ggplot2::geom_sf()` as an endpoint for creating the layer.
+
+### About SpatVectors {#about}
 
 SpatVector objects are vector data. This means that they are a set of individual
 points with geographic information (i.e. location of restaurants), that can be
@@ -83,7 +250,7 @@ spatvector2
 ```
 
 On that sense, {sf} already has its own implementation of {tidyverse} methods.
-Since converting SpatVector to sf it is straightforward with no loss of
+Since converting SpatVector to {sf} it is straightforward with no loss of
 information, {tidyterra} is specially focused on SpatRasters. See an example of
 how to work with {terra} + {sf} + {dplyr}:
 
@@ -105,111 +272,3 @@ spat_summ
 
 terra::plot(spat_summ, "TOTPOP")
 ```
-
-## Get started with {tidyterra}
-
-First thing you'll notice when loading {tidyterra} is that a set of packages
-would be also loaded. You can disable the message by setting
-`Sys.setenv(tidyterra.quiet = TRUE)`.
-
-```{r setup, message=TRUE}
-# Disable message with:
-# Sys.setenv(tidyterra.quiet = TRUE)
-library(tidyterra)
-```
-
-Currently, the following methods are available:
-
-+------------------------------+------------------------+----------------+
-| tidyverse method             | SpatVector             | SpatRaster     |
-+==============================+========================+================+
-| `tibble::as_tibble()`        | ✔️                     | ✔️             |
-+------------------------------+------------------------+----------------+
-| `dplyr::filter()`            | ✔️                     | ✔️             |
-+------------------------------+------------------------+----------------+
-| `dplyr::mutate()`            | ✔️                     | ✔️             |
-+------------------------------+------------------------+----------------+
-| `dplyr::pull()`              | ✔️                     | ✔️             |
-+------------------------------+------------------------+----------------+
-| `dplyr::relocate()`          | ✔️                     | ✔️             |
-+------------------------------+------------------------+----------------+
-| `dplyr::rename()`            | ✔️                     | ✔️             |
-+------------------------------+------------------------+----------------+
-| `dplyr::select()`            | ✔️                     | ✔️             |
-+------------------------------+------------------------+----------------+
-| `dplyr::slice()`             | ✔️                     | ✔️             |
-+------------------------------+------------------------+----------------+
-| `dplyr::transmute()`         | ✔️                     | ✔️             |
-+------------------------------+------------------------+----------------+
-| `tidyr::drop_na()`           | ✔️                     | ✔️             |
-+------------------------------+------------------------+----------------+
-| `tidyr::replace_na()`        | ✔️                     | ✔️             |
-+------------------------------+------------------------+----------------+
-
-Let's see some of them in action:
-
-```{r}
-
-f <- system.file("extdata/cyl_temp.tif", package = "tidyterra")
-
-temp <- rast(f)
-
-temp
-
-mod <- temp %>%
-  select(-1) %>%
-  mutate(newcol = tavg_06 - tavg_05) %>%
-  relocate(newcol, .before = 1) %>%
-  replace_na(list(newcol = 3)) %>%
-  rename(difference = newcol)
-
-mod
-plot(mod)
-```
-
-On the previous example, we had:
-
--   Eliminated the first layer of the raster `tavg_04`.
-
--   Created a new layer `newcol` as the difference of the layers `tavg_05` and
-    `tavg_06.`
-
--   Relocated `newcol`as the first layer of the SpatRaster
-
--   Replaced the `NA` values with `0`.
-
--   Renamed `newcol` to difference.
-
-In all the process, the essential properties of the SpatRaster (number of cells,
-columns and rows, extent, resolution and coordinate reference system) have not
-been modified. Other methods as `filter()`, `slice()` or `drop_na()` can modify
-these properties, as they would do when applied to a data frame (number of rows
-would be modified on that case).
-
-## Plotting with {ggplot2}
-
-### SpatVectors
-
-{tidyterra} allows you to plot SpatVectors with {ggplot2} using the
-`geom_spatvector()` functions:
-
-```{r}
-library(ggplot2)
-
-ggplot() +
-  geom_spatvector(data = spatvector, aes(fill = POP)) +
-  geom_spatvector_text(
-    data = spatvector, aes(label = NAME_2),
-    color = "grey90"
-  ) +
-  scale_fill_binned(labels = scales::number_format()) +
-  coord_sf(crs = 3857)
-```
-
-The underlying implementation is to take advantage of the conversion
-`terra::vect()/sf::st_as_sf()` (see [**About SpatVectors**](#about)) and use
-`ggplot2::geom_sf()` as an endpoint for creating the layer.
-
-### SpatRasters
-
-TODO
