Add new palette

--- a/README.Rmd
+++ b/README.Rmd
@@ -149,7 +149,7 @@ library(ggplot2)
 ggplot() +
   geom_spatraster(data = rastertemp) +
   facet_wrap(~lyr, ncol = 2) +
-  scale_fill_terrain_c(labels = scales::label_number(suffix = "º")) +
+  scale_fill_topo_c(labels = scales::label_number(suffix = "º")) +
   labs(fill = "Avg temperature")
 
 
