--- a/vignettes/tidyterra.Rmd
+++ b/vignettes/tidyterra.Rmd
@@ -149,7 +149,7 @@ volcano2 <- rast(f_volcano)
 ggplot() +
   geom_spatraster(data = volcano2) +
   geom_spatraster_contour(data = volcano2, breaks = seq(80, 200, 5)) +
-  scale_fill_topo_c() +
+  scale_fill_hypso_c() +
   coord_sf(expand = FALSE) +
   labs(fill = "elevation")
 
@@ -158,7 +158,7 @@ ggplot() +
 
 ggplot() +
   geom_spatraster_contour_filled(data = volcano2) +
-  scale_fill_terrain_d(direction = -1) +
+  scale_fill_hypso_d() +
   labs(fill = "elevation")
 ```
 
