--- a/README.Rmd
+++ b/README.Rmd
@@ -72,7 +72,7 @@ example, `as_tibble()` would return a tibble).
 Current methods and functions provided by {tidyterra} are:
 
 | tidyverse method      | SpatVector                             | SpatRaster                                                                                                     |
-|-----------------|-----------------|-----------------------------------------------|
+|-----------------------|----------------------------------------|----------------------------------------------------------------------------------------------------------------|
 | `tibble::as_tibble()` | :heavy_check_mark:                     | :heavy_check_mark:                                                                                             |
 | `dplyr::select()`     | :heavy_check_mark:                     | :heavy_check_mark: Select layers                                                                               |
 | `dplyr::mutate()`     | :heavy_check_mark:                     | :heavy_check_mark: Create /modify layers                                                                       |
@@ -212,6 +212,35 @@ ggplot() +
   theme_light() +
   # Change crs and datum (for relabeling graticules)
   coord_sf(crs = 3035, datum = 3035)
+```
+
+{tidyterra} provides specific scales for plotting hypsometric maps with
+{ggplot2}:
+
+```{r hypso}
+
+asia <- rast(system.file("extdata/asia.tif", package = "tidyterra"))
+
+terra::plot(asia)
+
+ggplot() +
+  geom_spatraster(data = asia) +
+  scale_fill_hypso_tint_c(
+    palette = "gmt_globe",
+    labels = scales::label_number(),
+    breaks = c(-10000, -5000, 0, 2500, 5000, 8000),
+    guide = guide_colorbar(
+      direction = "horizontal",
+      title.position = "top",
+      barwidth = 20
+    )
+  ) +
+  labs(
+    fill = "elevation (m)",
+    title = "Hypsometric map of Asia"
+  ) +
+  theme_minimal() +
+  theme(legend.position = "bottom")
 ```
 
 ## I need your feedback
