Update docs with pkgdev

--- a/vignettes/tidyterra.Rmd
+++ b/vignettes/tidyterra.Rmd
@@ -300,14 +300,10 @@ head(sfobj, 3)
 #> Dimension:     XY
 #> Bounding box:  xmin: 5.746118 ymin: 49.69933 xmax: 6.315773 ymax: 50.18162
 #> Geodetic CRS:  WGS 84
-#>   ID_1   NAME_1 ID_2   NAME_2 AREA   POP
-#> 1    1 Diekirch    1 Clervaux  312 18081
-#> 2    1 Diekirch    2 Diekirch  218 32543
-#> 3    1 Diekirch    3  Redange  259 18664
-#>                         geometry
-#> 1 POLYGON ((6.026519 50.17767...
-#> 2 POLYGON ((6.178368 49.87682...
-#> 3 POLYGON ((5.881378 49.87015...
+#>   ID_1   NAME_1 ID_2   NAME_2 AREA   POP                       geometry
+#> 1    1 Diekirch    1 Clervaux  312 18081 POLYGON ((6.026519 50.17767...
+#> 2    1 Diekirch    2 Diekirch  218 32543 POLYGON ((6.178368 49.87682...
+#> 3    1 Diekirch    3  Redange  259 18664 POLYGON ((5.881378 49.87015...
 
 plot(sfobj$geometry, main = "sf", axes = TRUE)
 ```
